# alignn_lightning

./: .gitignore  README.md  alignn_pl_in_colab.ipynb  pyproject.toml
alignn_pl/: alignn.py  alignn_pyg.py  config.py  data_pl.py  graph_vanilla.py
